docs:auth::swag init auth feat (#22)
