# docs/swagger.yaml
@@ -100,6 +100,10 @@ paths:
           description: Username or password is incorect
           schema:
             $ref: '#/definitions/response.ErrorResponse'
+        "403":
+          description: Maximum devices limit reached
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
         "422":
           description: Form validation error
           schema:
